platform/chartmuseum/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chartmuseum
  labels:
    app.kubernetes.io/name: chartmuseum
