platform/chartmuseum/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chartmuseum
  namespace: chartmuseum
  labels:
    app.kubernetes.io/name: chartmuseum
spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: chartmuseum

  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
