platform/chartmuseum/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chartmuseum
  namespace: chartmuseum
spec:
  hostnames:
    - chartmuseum.hacwa.internal

  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal-gateway
      namespace: platform-gateway
      sectionName: https-internal-wildcard

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - group: ""
          kind: Service
          name: chartmuseum
          port: 8080
          weight: 1
